add new paragraph

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>INI INDEX HTML</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta pariatur accusamus minima aut mollitia corrupti commodi alias, nam, veniam distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.</p>
 </body>
 </html>
