--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>INI INDEX HTML</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quae quod explicabo consequuntur accusantium velit accusamus modi ducimus placeat rerum!</p>
 </body>
 </html>
