--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>INI INDEX HTML</h1>
     <p>asdasdsaasd</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta pariatur accusamus minima aut mollitia corrupti commodi alias, nam, veniam distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.</p>
-    
+    <p>asdassdas</p>
 </body>
 </html>
