--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <h1>INI INDEX HTML</h1>
-    <p>asdasdsaasd</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta pariatur accusamus minima aut mollitia corrupti commodi alias, nam, veniam distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.</p>
+    <p>Lorem ipsum dolor sit amet.(andarios)</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta pariatur accusamus minima aut mollitia
+        corrupti commodi alias, nam, veniam distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.</p>
     <p>asdassdas</p>
     <p>INI TAMBAHAN SAE</p>
 </body>
+
 </html>
