--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <p>asdassdas</p>
     <p>INI TAMBAHAN SAE</p>
 
-    <a href="https://www.instagram.com/azkinf_/">ADD ig aku ges</a>
+    <p>Ini Tambahan Azki</p>
   </body>
 </html>
