--- a/index.html
+++ b/index.html
@@ -1,33 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-  </head>
-  <body>
+</head>
+<body>
     <h1>INI INDEX HTML</h1>
     <p>asdasdsaasd</p>
-<<<<<<< HEAD
-=======
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta pariatur accusamus minima aut mollitia corrupti commodi alias, nam, veniam distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.</p>
->>>>>>> 5c5e621d7d3a183415e07df4067180423589ad70    
-    <p>
-        mati tertimpa github
-    </p>
+
+    <p>INI TAMBAHAN SAE</p>
+    <p>Belajar ygy</p>
+    <p>Belajar Teross</p>
 </body>
 </html>
-=======
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero, dicta
-      pariatur accusamus minima aut mollitia corrupti commodi alias, nam, veniam
-      distinctio ipsa. Eaque quo debitis incidunt fugiat minus modi.
-    </p>
-    <p>asdassdas</p>
-    <p>INI TAMBAHAN SAE</p>
-
-    <p>Ini Tambahan Azki</p>
-  </body>
-</html>
->>>>>>> ec3e12b7625bc88f9d01b1ad2b101ac239395b9e
